lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/topgun2.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|18 Nov 2000 17:40:46 -0000
vti_author:SR|silverfoxsp
vti_modifiedby:SR|silverfoxsp
vti_timecreated:TR|18 Nov 2000 21:01:47 -0000
vti_backlinkinfo:VX|toc.html
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\my documents\\my webs/c\:/my documents/my webs:TR|18 Nov 2000 17:40:46 -0000
vti_nexttolasttimemodified:TR|18 Nov 2000 17:40:46 -0000
vti_syncwith_www.geocities.com\:80/silverfoxsp:TR|18 Nov 2000 17:40:46 -0000
